--- a/src/sass/layouts/_campari.scss
+++ b/src/sass/layouts/_campari.scss
@@ -7,13 +7,13 @@
     background-color: rgba(0, 0, 0, 0.2);
     transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1), visibility 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-// .backdrop.is-hidden {
+// .backdrop-campari.is-hidden {
 //     visibility: hidden;
 //     opacity: 0;
 //     pointer-events: none;
 // }
 
-// .backdrop.is-hidden .modal-campari {
+// .backdrop-campari.is-hidden .modal-campari {
 //     transform: translate(-50%, -50%) scale(0.2);
 // }
 .modal-campari {
@@ -22,30 +22,70 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-    width: 715px;
-    min-height: 557px;
-    padding: 40px;
+    width: 320px;
     background-color: $colorBackgroundDay;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+   
+    @include tablet {
+        width: 715px;
+        }
+}
+.campari-titles__border{
+    padding-top: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    @include tablet {
+        border-bottom: 1px solid $colorFontPrimary;
+        padding: 40px 28px;
+           
+        }
+}
+
+.campari-title {
+    @include fonts($ff: Roboto,
+            $ffs: normal,
+            $fw: 900,
+            $fs: 32px,
+            $lh: 38px);
+    color: $colorFontSecondary;
+    margin-bottom: 28px;
+    &__min {
+            @include fonts($ff: Poppins,
+                $ffs: normal,
+                $fw: 600,
+                $fs: 16px,
+                $lh: 24px);
+            text-transform: uppercase;
+        }
 }
 
 .campari-text {
+    &__container {
+            padding-top: 10px;
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-bottom: 120px;
+    
+            @include tablet {
+                padding-top: 28px;
+                padding-left: 28px;
+                padding-right: 33px;
+                padding-bottom: 116px;
+            }
+        }
+        color:$colorFontTertiary;
+        margin-bottom: 28px;
     @include fonts($ff: Poppins,
             $ffs: normal,
             $fw: 400,
             $fs: 16px,
             $lh: 28px);   
-    
-        color:$colorFontTertiary;
-    margin-bottom: 28px;
 }
 .campari-text__b{
     color: #000000;
 }
-.campari-list{
-    margin-bottom: 40px;
-}
+
 .campari-list__item{
     @include fonts($ff: Poppins,
             $ffs: normal,
@@ -64,11 +104,11 @@
     right: 8px;
     width: 30px;
     height: 30px;
-    border: 1px solid $colorBackgroundDay;
+    border: none;
     border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     background-color: $colorBackgroundDay;
 }
 
@@ -82,28 +122,21 @@
 }
 
 .campari-btn__add {
-    margin-right: auto;
-    margin-left: auto;
-    min-width: 185px;
+    position: absolute;
+    left: 16px;
+    bottom: 40px;
+    @include tablet {
+        position: absolute;
+        bottom: 28px;
+        right: 28px;
+        }
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-.campari-title{
-    font-family: 'Roboto';
-    font-weight: 900;
-    font-size: 32px;
-    line-height: 1.19;
-    color: $colorFontSecondary;
-    margin-bottom: 28px;
-}
-
-.campari-title__min{
-    @include fonts($ff: Poppins,
+    @include fonts($ff: Roboto,
             $ffs: normal,
-            $fw: 600,
-            $fs: 16px,
+            $fw: 400,
+            $fs: 20px,
             $lh: 24px);
-    text-transform: uppercase;
-    margin-bottom: 40px;
+    letter-spacing: 0.02em;
+    padding: 12px 24px;
+    background-color: $colorFontPrimary;
 }
