--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,4 +9,4 @@
 @import './layouts/catalogue';
 @import './layouts/footer';
 @import './layouts/buttons';
-@import './layouts/campari';
+@import './layouts/modal-ingredients';
