--- a/src/sass/layouts/_modal-ingredients.scss
+++ b/src/sass/layouts/_modal-ingredients.scss
@@ -7,15 +7,15 @@
     background-color: rgba(0, 0, 0, 0.2);
     transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1), visibility 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-// .backdrop-campari.is-hidden {
-//     visibility: hidden;
-//     opacity: 0;
-//     pointer-events: none;
-// }
+.backdrop-campari.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
 
-// .backdrop-campari.is-hidden .modal-campari {
-//     transform: translate(-50%, -50%) scale(0.2);
-// }
+.backdrop-campari.is-hidden .modal-campari {
+    transform: translate(-50%, -50%) scale(0.2);
+}
 .modal-campari {
     position: absolute;
     top: 50%;
@@ -115,10 +115,9 @@
 .campari-icon__close {
     fill: $colorFontSecondary;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.campari-btn__close:hover {
-    cursor: pointer;
+&:hover {
+        cursor: pointer;
+    }
 }
 
 .campari-btn__add {
