оформлення модалки інгредієнти

--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -1,8 +1,8 @@
 <div class="backdrop-campari is-hidden" data-modal>
     <div class="modal-campari">
-        <button type="button" class="campari-btn__close" data-modal-close>
-            <svg class="campari-icon__close" width="32" height="32">
-                <use href="#"></use>
+        <button type="button" class="campari-btn__close">
+            <svg class='modal-first__icon-close' width='32px' height='32px'>
+                <use href='./images/header/header-sprite.svg#icon-clarity_close-line'></use>
             </svg></button>
         <div class="campari-titles__border">
             <h2 class="campari-title">Campari</h2>
