--- a/src/sass/layouts/_modal-ingredients.scss
+++ b/src/sass/layouts/_modal-ingredients.scss
@@ -113,7 +113,7 @@
 }
 
 .campari-icon__close {
-    fill: $colorFontSecondary;
+    // fill: $colorFontSecondary;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 &:hover {
         cursor: pointer;
@@ -125,9 +125,11 @@
     left: 16px;
     bottom: 40px;
     @include tablet {
-        position: absolute;
-        bottom: 28px;
-        right: 28px;
+        width: max-content;
+    
+            position: absolute;
+            left: 28px;
+            bottom: 28px;
         }
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     @include fonts($ff: Roboto,
