--- a/src/template/coctail-card.hbs
+++ b/src/template/coctail-card.hbs
@@ -16,7 +16,7 @@
             <button class='btn__transparent' type='button'>
               Add to
               <img
-                src='/src/images/catalogue/heart.svg'
+                src='./src/images/catalogue/heart.svg'
                 alt='heart'
                 width='18'
                 height='18'
