--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -1,3 +1,9 @@
 <section class="catalogue container">
   <div class="catalogue-pattern"></div>
+  <h2 class="catalogue__title">Cocktails</h2>
+  <div class="modal-first container">
+    <div class="catalogue__card">
+      <ul class="catalogue__list list"></ul>
+    </div>
+  </div>
 </section>
