placement on the page favingr

--- a/src/template/favorite-ingredients.hbs
+++ b/src/template/favorite-ingredients.hbs
@@ -1,5 +1,5 @@
 <h2 class='catalogue__title'>Favorite ingredients</h2>
-<ul class='catalogue__list list'>
+<ul class='catalogue__list-favingr list'>
   <li class='catalogue__item'>
     <div class='catalogue__ingredient'>
       <ul class='list'>
