--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -207,7 +207,16 @@
 
     &--menu {
       @include tablet {
-        display: none;
+        position: absolute;
+        right: 102px;
+        width: 288px;
+      }
+
+      &.inputMenu--is-hidden {
+        @media screen and (max-width: 767px) {
+          display: none;
+
+        }
       }
 
       @include desktop {
@@ -248,6 +257,9 @@
     &--menu {
       @include desktop {
         display: block;
+        width: 288px;
+        position: absolute;
+        right: 336px;
       }
     }
   }
