--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -24,12 +24,15 @@
       alt="cocktail" />
   </picture>
   <h2 class="hero__search-mobile">Search your favorite cocktail by ABC</h2>
+
   <!-- кастомный селект -->
 
   <div class="select wrap">
     <button type="button" class="select__btn">
       <span class="select__current" data-value="A">A</span>
-      <img class="select__icon" src="./images/hero/sparow-down.svg" alt="sparot-down" width="24px" height="24px">
+      <svg class="select__icon" width="13" height="8">
+        <use href="/src/images/hero/symbol-defs.svg#icon-Vector"></use>
+      </svg>
     </button>
     <div class="select__body is-hidden">
       <div class="select__item" data-value="A">A</div>
