--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -4,6 +4,6 @@
     <div class="catalogue__card">
       <ul class="catalogue__list list"></ul>
     </div>
-    <div class="modal-first container"></div>
+    <!-- <div class="modal-first container"></div> -->
   </div>
 </section>
