--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -78,8 +78,8 @@
   <div class="header__favorite-box header__favorite-box--is-hidden">
     <ul class="header__favorite-box__list">
       <li class="header__favorite-box__item">
-        <a onclick="return false" class="header__favorite-box__text" href=""
-          ><span> Favorite cocktails</span></a
+        <a onclick="return false" class="header__favorite-box__text" href="">
+          Favorite cocktails</a
         >
       </li>
       <li class="header__favorite-box__item">
