--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -56,7 +56,9 @@
           >
         </li>
         <li class="header__nav-item">
-          <button type="button" class="header__nav-text--btn">Favorite</button>
+          <button type="button" class="header__nav-text header__nav-text--btn">
+            Favorite
+          </button>
         </li>
       </ul>
     </nav>
