--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -91,6 +91,7 @@
 
     &-item {
       height: max-content;
+
     }
 
     &-text {
@@ -110,6 +111,13 @@
         line-height: 24px;
         letter-spacing: 0.02em;
         color: #202025;
+      }
+
+      transition: 250ms;
+
+      &:hover,
+      &:focus {
+        color: #fd5103;
       }
     }
 
@@ -168,6 +176,15 @@
 
     @include desktop {
       display: none;
+    }
+  }
+
+  &__icon-menu {
+    transition: 250ms;
+
+    &:focus,
+    &:hover {
+      fill: #fd5103;
     }
   }
 
@@ -270,6 +287,14 @@
     height: 40px;
     border: 1px solid #fd5103;
     border-radius: 4px;
+    cursor: pointer;
+    transition: 250ms;
+
+    &:hover,
+    &:focus {
+      box-shadow: 0px 0px 4px #fd5103;
+      border-radius: 4px;
+    }
 
     &::placeholder {
       font-weight: 400;
@@ -278,6 +303,7 @@
       letter-spacing: 0.02em;
       color: #5f6775;
       opacity: 0.4;
+
     }
 
     @include desktop {
@@ -286,7 +312,7 @@
   }
 
   &__input-icon {
-    margin: auto;
+    margin: auto 5px;
   }
 
   &__input-button {
@@ -299,6 +325,13 @@
     height: 100%;
     width: 40px;
     height: 40px;
+    transition: 250ms;
+
+    &:hover,
+    &:focus {
+      box-shadow: 0px 0px 4px #fd5103;
+      border-radius: 4px;
+    }
   }
 
   &__color-theme-box {
@@ -345,10 +378,17 @@
       background: #ffffff;
       border: 0.604701px solid #fd5103;
       border-radius: 10px;
+      transition: 250ms;
+      cursor: pointer;
+
+      &:hover,
+      &:focus {
+        box-shadow: 0px 0px 4px #fd5103;
+      }
 
       &-ball {
-        height: 16px;
-        width: 16px;
+        height: 17px;
+        width: 17px;
         background-color: #fd5103;
         border-radius: 9px;
         margin-top: 1px;
@@ -370,6 +410,7 @@
   // }
 
   &__menu {
+    opacity: 1;
     position: fixed;
     top: 0;
     right: 0;
@@ -457,6 +498,7 @@
       @include fonts(Poppins, normal, 400, 18px, 24px);
       letter-spacing: 0.02em;
       color: #000000;
+      transition: 250ms;
 
       &:hover,
       &:focus {
