--- a/src/sass/layouts/_catalogue.scss
+++ b/src/sass/layouts/_catalogue.scss
@@ -196,19 +196,23 @@
   border-radius: 4px;
   border: 1px solid #fd5103;
   max-width: 479px;
-  margin-bottom: 20px;
+
   @include tablet {
     max-width: 335px;
   }
-  // @include desktop {
-  //   max-width: 395px;
-  // }
 }
 
 .catalogue__list {
+  display: grid;
+  gap: 20px;
+  margin-bottom: 20px;
+
   @include tablet {
-    display: flex;
+    grid-template-columns: repeat(2, 1fr);
     gap: 32px;
+  }
+  @include desktop {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -268,21 +272,5 @@
   @include tablet {
     @include fonts($ff: 'Poppins', $fw: 600, $fs: 16px, $lh: 24px);
     padding-top: 28px;
-  }
-}
-.catalogue__list {
-  @include tablet {
-    display: flex;
-    gap: 32px;
-  }
-}
-.catalogue__item {
-  background-color: transparent;
-  border-radius: 4px;
-  border: 1px solid #fd5103;
-  max-width: 479px;
-  padding-bottom: 20px;
-  @include tablet {
-    max-width: 335px;
   }
 }
