--- a/src/sass/layouts/_buttons.scss
+++ b/src/sass/layouts/_buttons.scss
@@ -1,7 +1,7 @@
 .btn__orange {
   padding: 15px 18px;
   background-color: #fe7031;
-  border: none;
+  border: 1px solid #fe7031;
   border-radius: 4px;
   color: #ffffff;
 
