--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -34,3 +34,14 @@
     </li>
   </ul>
 </section>
+
+<!-- <div class="not-found-cocktails">
+  <h3 class="not-found-cocktails__title">
+    Sorry, we didn't find any cocktail for you
+  </h3>
+  <img
+    class="not-found-cocktails__img"
+    src="./images/catalogue/not-found-coktails-svg.svg"
+    alt="not-found-cocktails-img"
+  />
+</div> -->
