--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,3 +11,4 @@
 @import './layouts/footer';
 @import './layouts/buttons';
 @import './layouts/modal-ingredients';
+@import './src/sass/layouts/not-found-cocktails';
