Fixed some bugs

--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -1,5 +1,5 @@
 <section class="catalogue container">
-  <div class="catalogue-pattern">
+  <div class="catalogue__pattern">
     <h2 class="catalogue__title">Cocktails</h2>
 
     <ul class="catalogue__list list"></ul>
