--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -45,3 +45,8 @@
     alt="not-found-cocktails-img"
   />
 </div> -->
+
+<!-- <h2>Sorry, we didn't find any cocktail for you</h2>
+<svg width="100px" style="display: flex">
+  <use href="./images/catalogue/not-found.svg#icon-photo"></use>
+</svg> -->
