--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -85,7 +85,10 @@
         >
       </li>
       <li class="header__favorite-box__item">
-        <a onclick="return false" class="header__favorite-box__text" href=""
+        <a
+          onclick="return false"
+          class="header__favorite-box__text header__favorite-box__text-2"
+          href=""
           >Favorite ingridients</a
         >
       </li>
