--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -185,6 +185,8 @@
     &:focus,
     &:hover {
       fill: #fd5103;
+      // box-shadow: 0px 0px 4px #fd5103;
+
     }
   }
 
@@ -199,6 +201,12 @@
       top: 21px;
       right: 20px;
     }
+
+    // &:hover,
+    // &:focus {
+    //   box-shadow: 0px 0px 4px #fd5103;
+    // }
+
   }
 
   &__icon-menu--is-hidden {
@@ -381,14 +389,17 @@
       transition: 250ms;
       cursor: pointer;
 
+
+
+
       &:hover,
       &:focus {
         box-shadow: 0px 0px 4px #fd5103;
       }
 
       &-ball {
-        height: 17px;
-        width: 17px;
+        height: 16px;
+        width: 16px;
         background-color: #fd5103;
         border-radius: 9px;
         margin-top: 1px;
@@ -512,4 +523,24 @@
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+.bgc--black {
+  background-color: #fd5103;
+}
+
+.bgc--white {
+  background-color: white;
+}
+
+.color--dark {
+  color: white;
+}
+
+.color--light {
+  color: #fd5103
+}
+
+.darc-theme {
+  color: #FCFCFC;
 }
