--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -23,7 +23,7 @@
           <button class="btn__transparent" type="button">
             Add to
             <img
-              src="/src/images/catalogue/heart.svg"
+              src="./images/catalogue/Vampiro.jpg"
               alt="heart"
               width="18"
               height="18"
