--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,5 @@
 @import './common';
+@import './layouts/dark-theme';
 @import './utils/fonts';
 @import './utils/mixins';
 @import './utils/colors';
