--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,24 +1,24 @@
 .header {
-  position: relative;
 
   &-container {
     display: flex;
+    position: relative;
 
     padding-top: 20px;
-    padding-right: 20px;
+    // padding-right: 20px;
     padding-bottom: 20px;
-    padding-left: 20px;
+    // padding-left: 20px;
     margin-left: auto;
     margin-right: auto;
 
     @include tablet {
-      padding-left: 32px;
-      padding-right: 32px;
+      // padding-left: 32px;
+      // padding-right: 32px;
     }
 
     @include desktop {
-      padding-left: 16px;
-      margin-right: 16px;
+      // padding-left: 16px;
+      // margin-right: 16px;
     }
   }
 
@@ -403,14 +403,14 @@
         background-color: #fd5103;
         border-radius: 9px;
         margin-top: 1px;
-        margin-left: 1px;
+        margin-left: 1.5px;
 
         &.ball-left {
           margin-left: 1px;
         }
 
         &.ball-right {
-          transform: translateX(20px);
+          transform: translateX(19.5px);
         }
       }
     }
