--- a/src/sass/layouts/dark-theme.scss
+++ b/src/sass/layouts/dark-theme.scss
@@ -19,6 +19,10 @@ body {
 
         }
     }
+
+    >main>section.hero.container>div>div>div {
+        cursor: pointer;
+    }
 }
 
 body.dark-theme {
