--- a/src/partials/favorite-ingridients.html
+++ b/src/partials/favorite-ingridients.html
@@ -1,14 +1,4 @@
-<section class="catalogue container">
-  <div class="catalogue__pattern">
-    <h2 class="catalogue__title">Cocktails</h2>
-
-    <ul class="catalogue__list list"></ul>
-
-    <div class="modal-first"></div>
-  </div>
-</section>
-
-<!-- <section class="container">
+<section class="container">
   <h2 class="catalogue__title">Favorite ingredients</h2>
 
   <ul class="catalogue__list list">
@@ -34,20 +24,4 @@
       </div>
     </li>
   </ul>
-</section> -->
-
-<!-- <div class="not-found-cocktails">
-  <h3 class="not-found-cocktails__title">
-    Sorry, we didn't find any cocktail for you
-  </h3>
-  <img
-    class="not-found-cocktails__img"
-    src="./images/catalogue/not-found-cocktails-svg.svg"
-    alt="not-found-cocktails-img"
-  />
-</div> -->
-
-<!-- <h2>Sorry, we didn't find any cocktail for you</h2>
-<svg width="100px" style="display: flex">
-  <use href="./images/catalogue/not-found.svg#icon-photo"></use>
-</svg> -->
+</section>
