--- a/src/template/not-found-cocktails.hbs
+++ b/src/template/not-found-cocktails.hbs
@@ -4,7 +4,7 @@
   </h3>
   <img
     class='not-found-cocktails__img'
-    src='/src/images/catalogue/Vampiro.jpg'
+    src='./images/catalogue/Vampiro.jpg'
     alt='not-found-cocktails-img'
   />
 </div>
