--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,3 +13,4 @@
 @import './layouts/buttons';
 @import './layouts/modal-ingredients';
 @import './layouts/not-found-cocktails';
+@import './layouts/page__is-hidden';
