--- a/src/partials/favorite-ingridients.html
+++ b/src/partials/favorite-ingridients.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container favorite-ingridients">
   <h2 class="catalogue__title">Favorite ingredients</h2>
 
   <ul class="catalogue__list list">
