--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="container">
+  <div class="container" style="position: relative">
     <div class="header-container container">
       <a href="./index.html" class="header__logo-link">
         <img
