--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,4 +1,10 @@
 .header {
+  height: 90px;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: white;
+  box-shadow: 0px 0px 10px;
 
   &-container {
     display: flex;
@@ -163,13 +169,14 @@
   // &__logo-link {
   // }
   &__button-menu {
+    margin-top: 15px;
     margin: 0;
     padding: 0;
     margin-left: auto;
 
-    // @include tablet {
-    //   margin-left: 40px;
-    // }
+    @include tablet {
+      margin-top: 10px
+    }
 
     border: none;
     background-color: inherit;
@@ -235,6 +242,7 @@
         position: absolute;
         right: 102px;
         width: 288px;
+        top: 25px;
       }
 
       &.inputMenu--is-hidden {
@@ -377,6 +385,7 @@
       line-height: 1.33;
       align-items: center;
       color: #5f6775;
+
     }
 
     &__switch {
@@ -469,13 +478,17 @@
     width: 210px;
     height: 96px;
     border: 1px solid #fd5103;
-    border-radius: 4px;
+    // border-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-top: none;
     left: 357px;
     top: 71px;
 
     @include desktop {
       left: 369px;
       position: absolute;
+      top: 90px;
     }
 
 
@@ -544,4 +557,8 @@
 
 .darc-theme {
   color: #FCFCFC;
+}
+
+.header__menu.header__menu--is-hidden>div>span.header__color-theme-box-text.header__color-theme-box-text--light {
+  color: #fd5103;
 }
