--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -479,11 +479,20 @@
     height: 96px;
     border: 1px solid #fd5103;
     // border-radius: 4px;
-    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    border-top: none;
+    border-bottom-left-radius: 4px;
     left: 357px;
     top: 71px;
+
+    @media screen and (max-width: 1279px) {
+      left: 198px;
+    }
+
+    @include desktop {
+      border-top: none;
+    }
 
     @include desktop {
       left: 369px;
@@ -505,6 +514,7 @@
       list-style: none;
       display: flex;
       flex-direction: column;
+      height: 100%;
     }
 
     &__item {
