--- a/src/sass/layouts/dark-theme.scss
+++ b/src/sass/layouts/dark-theme.scss
@@ -172,14 +172,23 @@ body.dark-theme {
         background-color: #202025;
 
         @media screen and (max-width: 1279px) {
-            border-radius: 4px;
+            // border-top-right-radius: 4px;
+            // border-top-left-radius: 4px;
+            // border-bottom-right-radius: 4px;
+            // border-bottom-left-radius: 4px;
             top: 230px;
-            left: 199px;
+            left: 358px;
         }
 
         @media screen and (min-width: 1280px) {
             border-top: none;
+            border-top-left-radius: 0px;
+            border-top-right-radius: 0px;
+        }
 
+        @media screen and (max-width: 767px) {
+            top: 310px;
+            left: 20px;
         }
     }
 
