--- a/src/sass/layouts/_custome-select.scss
+++ b/src/sass/layouts/_custome-select.scss
@@ -66,6 +66,10 @@
     }
 
     @include tablet {
+      position: absolute;
+      top: 50%;
+      right: 50%;
+
       display: flex;
       flex-wrap: wrap;
       justify-content: space-evenly;
@@ -78,6 +82,7 @@
     @include desktop {
       width: 519px;
       height: 120px;
+      right: 60%;
     }
 
     // клас который скрывает алфавит для мобилки
@@ -88,6 +93,7 @@
       }
       // для планшета открывает алфавит
       @include tablet {
+        pointer-events: visible;
         opacity: 1;
       }
     }
@@ -104,6 +110,9 @@
     @include tablet {
       @include fonts($fw: 700, $ffs: bold, $fs: 14px, $lh: 21px);
       padding: 0px 7px;
+      &:hover {
+        color: $colorFontPrimary;
+      }
     }
     @include desktop {
       @include fonts($fw: 700, $fs: 24px, $lh: 36px);
