Rcvd update from Oles

--- a/src/template/not-found-cocktails.hbs
+++ b/src/template/not-found-cocktails.hbs
@@ -2,9 +2,9 @@
   <h3 class='not-found-cocktails__title'>
     Sorry, we didn't find any cocktail for you
   </h3>
-  <img
+  {{!-- <img
     class='not-found-cocktails__img'
-    src='/src/images/catalogue/Vampiro.jpg'
+    src='{{}}'
     alt='not-found-cocktails-img'
-  />
+  /> --}}
 </div>
