--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,20 +8,32 @@
     </li>
   </ul>
   <picture>
-    <source srcset="
+    <source
+      srcset="
         /src/images/hero/delicious-sangria-cocktail-held-in-hand1280_1x.png 1x,
         /src/images/hero/delicious-sangria-cocktail-held-in-hand1280_2x.png 2x
-      " media="(min-width:1280px)" />
-    <source srcset="
+      "
+      media="(min-width:1280px)"
+    />
+    <source
+      srcset="
         /src/images/hero/delicious-sangria-cocktail-held-in-hand768_1x.png 1x,
         /src/images/hero/delicious-sangria-cocktail-held-in-hand768_2x.png 2x
-      " media="(min-width: 768px)" />
-    <source srcset="
+      "
+      media="(min-width: 768px)"
+    />
+    <source
+      srcset="
         /src/images/hero/delicious-sangria-cocktail-held-in-hand320_1x.png 1x,
         /src/images/hero/delicious-sangria-cocktail-held-in-hand320_2x.png 2x
-      " media="(min-width: 320px)" />
-    <img class="img__cocktail" src="/src/images/hero/delicious-sangria-cocktail-held-in-hand1280_1x.png"
-      alt="cocktail" />
+      "
+      media="(min-width: 320px)"
+    />
+    <img
+      class="img__cocktail"
+      src="/src/images/hero/delicious-sangria-cocktail-held-in-hand1280_1x.png"
+      alt="cocktail"
+    />
   </picture>
   <h2 class="hero__search-mobile">Search your favorite cocktail by ABC</h2>
 
@@ -73,5 +85,4 @@
       <div class="select__item" data-value="0">0</div>
     </div>
   </div>
-
 </section>
