--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -2,7 +2,7 @@
   <div class="catalogue__pattern">
     <h2 class="catalogue__title">Cocktails</h2>
 
-    <ul class="catalogue__list list"></ul>
+    <ul class="catalogue__list list" data-modal></ul>
 
     <div class="modal-first"></div>
   </div>
