--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -1,10 +1,12 @@
-<section class="catalogue container">
-  <div class="catalogue__pattern">
-    <h2 class="catalogue__title">Cocktails</h2>
+<section class="catalogue">
+  <div class="container">
+    <div class="catalogue__pattern">
+      <h2 class="catalogue__title">Cocktails</h2>
 
-    <ul class="catalogue__list list"></ul>
+      <ul class="catalogue__list list"></ul>
 
-    <div class="modal-first"></div>
+      <div class="modal-first"></div>
+    </div>
   </div>
 </section>
 
