--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -2,9 +2,11 @@
   <div class="catalogue__pattern">
     <h2 class="catalogue__title">Cocktails</h2>
 
-    <ul class="catalogue__list list" data-modal></ul>
+    <ul class="catalogue__list list" data-modal-open></ul>
 
-    <div class="modal-first"></div>
+    <div class="backdrop is-hidden" data-modal>
+      <!--  -->
+    </div>
   </div>
 </section>
 
