--- a/src/template/modal-cocktails.hbs
+++ b/src/template/modal-cocktails.hbs
@@ -1,12 +1,19 @@
 <div class='modal-first'>
-  <h2 class='modal-first__title'>{{strDrink}}</h2>
+  <h2 class='modal-first__title'>Coctail</h2>
 
   <div class='modal-first__instractions'>
     <h3 class='modal-first__title-second'>Instractions:</h3>
-    <p class='modal-first__text'>{{strInstructions}}</p>
+    <p class='modal-first__text'>Lorem ipsum dolor sit amet, consectetur
+      adipisicing elit. Voluptates pariatur facilis ab quibusdam quae corporis
+      obcaecati quidem necessitatibus aspernatur illo provident, ullam iure
+      eaque debitis alias maiores mollitia voluptas quia!</p>
   </div>
 
-  <img class='modal-first__img' src='{{strDrinkThumb}}' alt='{{strDrink}}' />
+  <img
+    class='modal-first__img'
+    src='https://images.prom.ua/3957303837_w640_h640_nabor-stakanov-2.jpg'
+    alt='Coctail'
+  />
 
   <div class='modal-first__ingridients'>
     <h3 class='modal-first__title-second ingridients'>INGREDIENTS</h3>
@@ -35,6 +42,8 @@
     width='32px'
     height='32px'
   >
-    <use href='./images/header/header-sprite.svg#icon-clarity_close-line'></use>
+    <use
+      href='../images/header/header-sprite.svg#icon-clarity_close-line'
+    ></use>
   </svg>
 </div>
