--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,7 @@
 <footer class="footer">
   <div>
-    <p class="footer__copyright">©2022 - Hardcore Bar</p>
+    <p class="footer__copyright" style="position: relative; bottom: 40px">
+      ©2022 - Hardcore Bar <br />Created by Hard & Heavy devро group.
+    </p>
   </div>
 </footer>
