--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -1,11 +1,14 @@
 <section class="catalogue container">
   <div class="catalogue__pattern">
-    <h2 class="catalogue__title">Cocktails</h2>
+    <h2 class="catalogue__title"></h2>
 
     <ul class="catalogue__list list" data-modal-open></ul>
 
-    <div class="backdrop is-hidden" data-modal>
-      <div class="modal-first">
+    <div class="backdrop is-hidden" data-modal></div>
+  </div>
+</section>
+
+<!-- <div class="modal-first">
         <h2 class="modal-first__title">strDrink</h2>
 
         <div class="modal-first__instractions">
@@ -50,18 +53,4 @@
             href="./images/header/header-sprite.svg#icon-clarity_close-line"
           ></use>
         </svg>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- <div class="not-found-cocktails">
-  <h3 class="not-found-cocktails__title">
-    Sorry, we didn't find any cocktail for you
-  </h3>
-  <img
-    class="not-found-cocktails__img"
-    src="./images/catalogue/not-found-cocktails-svg.svg"
-    alt="not-found-cocktails-img"
-  />
-</div> -->
+      </div> -->
