--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -45,7 +45,7 @@
       <use href="/src/images/hero/symbol-defs.svg#icon-Vector"></use>
     </svg>
   </button>
-  <div class="select__body is-hidden">
+  <div class="select__body is-hidden-hero">
     <div class="select__item" data-value="A">A</div>
     <div class="select__item" data-value="B">B</div>
     <div class="select__item" data-value="C">C</div>
