--- a/src/sass/layouts/_not-found-cocktails.scss
+++ b/src/sass/layouts/_not-found-cocktails.scss
@@ -7,10 +7,22 @@
 
   @include tablet {
     padding-bottom: 5px;
+    position: relative;
+    right: -60%;
   }
 
   @include desktop {
-    padding-top: 252px;
+    // padding-top: 252px;
+    position: relative;
+    right: -80%;
+  }
+
+  @media screen and(max-width: 1279px) {
+    margin-top: -60px;
+  }
+
+  @media screen and (max-width: 767px) {
+    margin-top: -100px;
   }
 
   &__title {
