--- a/src/template/modal-cocktails.hbs
+++ b/src/template/modal-cocktails.hbs
@@ -1,27 +1,15 @@
 <div class='modal-first'>
-  <h2 class='modal-first__title'>Negroni</h2>
+  <h2 class='modal-first__title'>{{strDrink}}</h2>
   <div class='modal-first__instractions'>
     <h3 class='modal-first__title-second'>Instractions:</h3>
-    <p class='modal-first__text'>
-      Add the gin, Campari and sweet vermouth to a mixing glass filled with ice,
-      and stir until well-chilled. Strain into a rocks glass filled with large
-      ice cubes. Garnish with an orange peel.
-    </p>
+    <p class='modal-first__text'>{{strInstructions}}</p>
   </div>
-  <img
-    class='modal-first__img'
-    src='https://format.dp.ua/components/com_jshopping/files/img_products/stakan-whisky-sw-ny01.jpg'
-    alt='buhlo'
-  />
+  <img class='modal-first__img' src='{{strDrinkThumb}}' alt='{{strDrink}}' />
   <div class='modal-first__ingridients'>
     <h3 class='modal-first__title-second ingridients'>INGREDIENTS</h3>
     <span class='modal-first__span'>Per cocktail</span>
     <ul class='modal-first__list list'>
       <li class='modal-first__item'>Ice</li>
-      <li class='modal-first__item'>1 ounce gin</li>
-      <li class='modal-first__item'>1 ounce Campari</li>
-      <li class='modal-first__item'>1 ounce sweet vermouth</li>
-      <li class='modal-first__item'>Garnish: orange peel</li>
     </ul>
   </div>
   <button type='button' class='modal-first__button'>Add to favorite</button>
@@ -32,6 +20,6 @@
     height='32px'
     data-modal-close
   >
-    <use href='./images/header/header-sprite.svg#icon-clarity_close-line'></use>
+    <use href='../images/catalogue/close.svg'></use>
   </svg>
 </div>
