--- a/src/partials/favorite-cocktails.html
+++ b/src/partials/favorite-cocktails.html
@@ -5,7 +5,7 @@
     </h2>
 
     <ul class="catalogue__list list">
-      <li class="catalogue__item">
+      <!-- <li class="catalogue__item">
         <img
           src="https://www.thecocktaildb.com/images/media/drink/mql55h1643820632.jpg"
           alt=""
@@ -36,7 +36,7 @@
             </button>
           </div>
         </div>
-      </li>
+      </li> -->
     </ul>
 
     <div class="modal-first"></div>
