--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -343,6 +343,7 @@
     height: 40px;
     transition: 250ms;
 
+
     &:hover,
     &:focus {
       box-shadow: 0px 0px 4px #fd5103;
@@ -472,6 +473,7 @@
   }
 
   &__favorite-box {
+    background-color: #fff;
     // transition: 1000ms;
     position: absolute;
     z-index: 3;
