--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -301,15 +301,21 @@
     padding: 0px 0px 0px 48px;
     width: 100%;
     height: 40px;
-    border: 1px solid #fd5103;
+    // border: 1px solid #fd5103;
     border-radius: 4px;
     cursor: pointer;
     transition: 250ms;
+    border: none;
+    box-shadow: inset 0px 0px 3px 0px black;
 
     &:hover,
     &:focus {
-      box-shadow: 0px 0px 4px #fd5103;
+      box-shadow: inset 0px 0px 6px 0px black;
       border-radius: 4px;
+
+      &::placeholder {
+        color: #fd5103;
+      }
     }
 
     &::placeholder {
@@ -332,22 +338,23 @@
   }
 
   &__input-button {
+    border-bottom-left-radius: 4px;
+    border-top-left-radius: 4px;
     position: absolute;
-    border: 1px solid #fd5103;
-    border-left: none;
-    border-bottom: none;
-    border-top: none;
+    border: none;
     background-color: inherit;
     height: 100%;
     width: 40px;
     height: 40px;
     transition: 250ms;
+    box-shadow: inset 0 0 3px black;
+    background-color: white;
 
 
     &:hover,
     &:focus {
-      box-shadow: 0px 0px 4px #fd5103;
-      border-radius: 4px;
+      box-shadow: inset 0px 0px 6px 0px black;
+
     }
   }
 
@@ -479,7 +486,7 @@
     z-index: 3;
     width: 210px;
     height: 96px;
-    border: 1px solid #fd5103;
+    // border: 1px solid #fd5103;
     // border-radius: 4px;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
