--- a/src/sass/layouts/dark-theme.scss
+++ b/src/sass/layouts/dark-theme.scss
@@ -97,7 +97,7 @@ body.dark-theme {
     .header__input {
         background-color: $colorFontSecondary;
         color: $colorFontQuaternary;
-        box-shadow: inset 0px 0px 5px 0px black;
+        box-shadow: inset 0px 0px 4px 0px black;
         outline: none;
         border: none;
         transition: 250ms;
@@ -123,7 +123,7 @@ body.dark-theme {
         &:hover,
         &:focus {
             // outline: 1px solid $colorFontQuinary;
-            box-shadow: inset 0px 0px 10px 0px black;
+            box-shadow: inset 0px 0px 8px 0px black;
 
             &::placeholder {
                 font-weight: 400;
@@ -147,12 +147,12 @@ body.dark-theme {
             border: none;
             // border-radius: 4px;
             // border-right: 1px solid black;
-            box-shadow: inset 0px 0px 5px 0px black;
+            box-shadow: inset 0px 0px 4px 0px black;
             background-color: $colorBackGroundNight;
 
             &:hover,
             &:focus {
-                box-shadow: inset 0px 0px 10px 0px black;
+                box-shadow: inset 0px 0px 8px 0px black;
             }
         }
 
@@ -228,6 +228,8 @@ body.dark-theme {
 
     .header__favorite-box__text {
         color: $colorFontQuaternary;
+        border-bottom-right-radius: 4px;
+        border-bottom-left-radius: 4px;
 
         &:hover,
         &:focus {
