--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header id="header" class="header">
   <div class="container" style="position: relative; height: 90px">
     <div class="header-container container">
       <a href="./index.html" class="header__logo-link">
@@ -101,5 +101,10 @@
         </li>
       </ul>
     </div>
+    <a href="#toTop" class="button-toTop">
+      <svg class="button-toTop__icon" width="15px" height="30px">
+        <use href="./images/header/header-sprite.svg#icon-sort-alpha-asc"></use>
+      </svg>
+    </a>
   </div>
 </header>
