--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -586,3 +586,34 @@
 .header__menu.header__menu--is-hidden>div>span.header__color-theme-box-text.header__color-theme-box-text--light {
   color: #fd5103;
 }
+
+.button-toTop {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  border: none;
+  background-color: transparent;
+  position: fixed;
+  right: 0px;
+  bottom: 15%;
+  padding: 6px 3px 6px 3px;
+  // border: 1px solid black;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  color: #FCFCFC;
+  background-color: #fd5103;
+  box-shadow: 0 0 3px #000;
+  z-index: 15;
+
+  &:hover,
+  &:focus {
+    color: #fd5103;
+    box-shadow: 0 0 6px #000;
+    background-color: #FCFCFC;
+  }
+
+  &__icon {
+    // background-color: white;
+    fill: currentColor;
+  }
+}
