--- a/src/partials/modal-ingredients.html
+++ b/src/partials/modal-ingredients.html
@@ -1,6 +1,6 @@
-<div class="backdrop-campari is-hidden" data-modal>
+<div class="backdrop-campari red" data-modal>
     <div class="modal-campari">
-        <button type="button" class="campari-btn__close">
+        <button type="button" class="campari-btn__close red">
             <svg class="modal-first__icon-close" width="32px" height="32px">
                 <use href="./images/header/header-sprite.svg#icon-clarity_close-line"></use>
             </svg>
