--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -101,10 +101,13 @@
         </li>
       </ul>
     </div>
-    <a href="#toTop" class="button-toTop">
-      <svg class="button-toTop__icon" width="15px" height="30px">
-        <use href="./images/header/header-sprite.svg#icon-sort-alpha-asc"></use>
-      </svg>
+    <a
+      style="text-decoration: none; flex-direction: column"
+      href="#toTop"
+      class="button-toTop"
+    >
+      ABC
+      <span style="font-size: 10px"> Search</span>
     </a>
   </div>
 </header>
