--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,7 +4,9 @@
       <h1 class="hero__list">A party without cocktails is not like a party</h1>
     </li>
     <li>
-      <h2 class="hero__search">Search your favorite cocktail by ABC</h2>
+      <h2 class="hero__search" id="toTop">
+        Search your favorite cocktail by ABC
+      </h2>
     </li>
   </ul>
   <picture>
