--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -594,9 +594,18 @@
   border: none;
   background-color: transparent;
   position: fixed;
-  right: 0px;
   bottom: 15%;
-  padding: 6px 3px 6px 3px;
+  padding: 10px 24px 10px 24px;
+  transition: 250ms;
+
+  @include tablet {
+    padding: 10px 36px 10px 36px;
+  }
+
+  @include desktop {
+    padding: 10px 16px 10px 16px;
+  }
+
   // border: 1px solid black;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -604,9 +613,25 @@
   background-color: #fd5103;
   box-shadow: 0 0 3px #000;
   z-index: 15;
+  right: -55px;
 
-  &:hover,
+  @include tablet {
+    right: -67px;
+  }
+
+  @include desktop {
+    right: -47px;
+  }
+
+  &:hover {
+    box-shadow: 0 0 6px #000;
+    right: 0px;
+
+  }
+
   &:focus {
+    right: 0px;
+    // transform: translateX(-20px);
     color: #fd5103;
     box-shadow: 0 0 6px #000;
     background-color: #FCFCFC;
