--- a/src/template/cocktail-card.hbs
+++ b/src/template/cocktail-card.hbs
@@ -1,4 +1,5 @@
-<li class='catalogue__item'>
+
+<li class='catalogue__item' id='{{idDrink}}'>
   <img
     src='{{strDrinkThumb}}'
     alt='{{strDrink}}'
