--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -3,7 +3,10 @@
     <h2 class="catalogue__title"></h2>
 
     <ul class="catalogue__list list" data-modal-open></ul>
-
+    <!-- modal coctails -->
     <div class="backdrop is-hidden" data-modal></div>
+    <!-- modal ingredients -->
+    <div class="backdrop-campari is-hidden-campari red">
+    </div>
   </div>
 </section>
