--- a/src/template/cocktail-card.hbs
+++ b/src/template/cocktail-card.hbs
@@ -1,5 +1,4 @@
-
-<li class='catalogue__item' id='{{idDrink}}'>
+<li id='{{idDrink}}' class='catalogue__item' >
   <img
     src='{{strDrinkThumb}}'
     alt='{{strDrink}}'
