--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -6,7 +6,6 @@
     <!-- modal coctails -->
     <div class="backdrop is-hidden" data-modal></div>
     <!-- modal ingredients -->
-    <div class="backdrop-campari is-hidden-campari red">
-    </div>
+    <div class="backdrop-campari is-hidden-campari red"></div>
   </div>
 </section>
