--- a/src/sass/layouts/_catalogue.scss
+++ b/src/sass/layouts/_catalogue.scss
@@ -1,8 +1,6 @@
 .modal-first {
   position: absolute;
   overflow: hidden;
-  // width: 300px;
-  // height: 300px;
 
   z-index: 2;
 
@@ -11,7 +9,7 @@
   transform: translate(-50%, -50%);
   min-height: auto;
 
-  background-color: white;
+  background-color: $colorFontQuaternary;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -36,8 +34,6 @@
 
   &__title {
     margin-bottom: 20px;
-    width: 129px;
-    height: 37px;
 
     @include fonts(Roboto, normal, 900, 32px, 38px);
 
@@ -73,8 +69,6 @@
 
   &__text {
     margin-bottom: 32px;
-    width: 275px;
-    height: 168px;
 
     @include fonts(Poppins, normal, 400, 16px, 28px);
 
@@ -82,7 +76,6 @@
 
     @include tablet {
       width: 615px;
-      height: 84px;
       margin-bottom: 40px;
     }
   }
@@ -94,7 +87,7 @@
     @include tablet {
       margin-bottom: 0;
       width: 288px;
-      height: 320px;
+      height: auto;
       display: flex;
       position: absolute;
       top: 0;
@@ -119,7 +112,7 @@
     padding-inline-start: 0;
 
     @include tablet {
-      margin-bottom: 52px;
+      min-height: 130px;
     }
   }
 
@@ -158,9 +151,6 @@
       display: flex;
       justify-content: end;
       margin-left: auto;
-      // position: absolute;
-      // right: 28px;
-      // bottom: 28px;
       order: 4;
     }
   }
@@ -169,8 +159,7 @@
     position: absolute;
     top: 16px;
     right: 16px;
-    background-color: #fd5103;
-    fill: black;
+
     border-radius: 50%;
 
     @include tablet {
