--- a/src/sass/layouts/_dark-theme.scss
+++ b/src/sass/layouts/_dark-theme.scss
@@ -7,6 +7,8 @@ $colorFontQuaternary: #fcfcfc;
 $colorFontQuinary: #bdbdbd;
 
 body {
+  margin-right: calc(-1 * (100vw - 100%));
+
   .hero {
     padding-top: 90px;
   }
