--- a/src/sass/layouts/_buttons.scss
+++ b/src/sass/layouts/_buttons.scss
@@ -17,7 +17,7 @@
 
 .btn__transparent {
   display: flex;
-  text-align: center;
+  align-items: center;
   gap: 9px;
   padding: 10px 19px;
   background-color: transparent;
