--- a/src/sass/layouts/_catalogue.scss
+++ b/src/sass/layouts/_catalogue.scss
@@ -247,6 +247,7 @@
 
   @include tablet {
     @include fonts($ff: 'Roboto', $fw: 900, $fs: 28px, $lh: 33px);
+    height: 75px;
     padding-top: 20px;
   }
 
