--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -9,6 +9,10 @@
     </div>
 
     <!-- modal ingredients -->
-    <div class="backdrop-campari is-hidden-campari red"></div>
+    <div class="backdrop-campari is-hidden-campari red" data-modal>
+      <div class="modal-campari">
+
+      </div>
+    </div>
   </div>
 </section>
