--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -10,9 +10,7 @@
 
     <!-- modal ingredients -->
     <div class="backdrop-campari is-hidden-campari red" data-modal>
-      <div class="modal-campari">
-
-      </div>
+      <div class="modal-campari"></div>
     </div>
   </div>
 </section>
