--- a/src/template/modal-cocktails.hbs
+++ b/src/template/modal-cocktails.hbs
@@ -15,12 +15,8 @@
   </ul>
 </div>
 <button type='button' class='modal-first__button'>Add to favorite</button>
-
-  <img
-    src="http://localhost:1234/close.svg"
-      class='modal-first__icon-close'
-      width='32px'
-      height='32px'
-      data-modal-close
-    >
-  </img>
+<svg class='modal-first__icon-close' data-modal-close>
+  <use
+    href='http://localhost:1234/all_svg.svg#icon-clarity_close-line-black'
+  ></use>
+</svg>
